# QMainWindowLeaks

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qwindowleaks.txt
